# call-rust-from-js-example

./: .gitignore  fib.scala  readme.md
js/: index.js  native.js  package-lock.json  package.json  pure.js  wasm.js
rust/: .gitignore  Cargo.toml
rust-fib/: Cargo.toml
rust-fib/src/: main.rs
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
rust/fib/src/: lib.rs
rust/native/: Cargo.toml
rust/native/src/: lib.rs
rust/runner/: Cargo.toml
rust/runner/src/: main.rs
rust/src/: lib.rs
rust/wasm/: Cargo.toml
rust/wasm/src/: lib.rs
